--- a/.github/workflows/BINARY_VERSION.yml
+++ b/.github/workflows/BINARY_VERSION.yml
@@ -25,6 +25,7 @@ jobs:
         run: |
           raw=$(git branch -r --contains ${{ github.ref }})
           branch=${raw/origin\/}
+          go mod tidy
           env GOOS=darwin go build -ldflags="-s -w -X 'main.BINARY_VERSION=${GITHUB_REF##*/}'" -o cf/lrc_macos .
       - name: Run
         run: ./cf/lrc_macos -v
